{ListPages.css} fix flex wrap grid display

--- a/client/src/styles/CardDesign.css
+++ b/client/src/styles/CardDesign.css
@@ -7,12 +7,17 @@
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     text-align: left;
 
-    height: 200px;
-    width: 200px;
+    height: 220px;
+    width: 220px;
+
 
     margin-top: 0;
     margin-bottom: 0;
     margin: 10px;
+
+    cursor: pointer;
+
+    
 
 
 
